--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "electron": "^31.0.1"
   },
   "dependencies": {
-    "marked": "^4.3.0",
-    "highlight.js": "^11.9.0"
+    "marked": "^12.0.2",
+    "highlight.js": "^11.9.0",
+    "marked-katex-extension": "^1.2.0"
   }
 }
